# route-detect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
practicum/: README.md  evaluate.py
routes/: __init__.py  __main__.py  const.py  log.py  main.py  types.py  util.py
routes/commands/: __init__.py  viz.py  which.py
routes/queries/: Rails.ql  Sinatra.ql  __init__.py  codeql-workspace.yml  qlpack.yml
routes/queries/rails/lib/: qlpack.yml
routes/queries/rails/lib/route_detect/: Auth.qll
routes/queries/rails/src/: qlpack.yml
routes/queries/rails/src/route_detect/: RailsAuth.ql  RailsUnauth.ql
routes/queries/rails/test/: codeql-pack.lock.yml  qlpack.yml
routes/queries/rails/test/query-tests/route_detect/: RailsAuth.expected  RailsAuth.qlref  RailsUnauth.expected  RailsUnauth.qlref
routes/queries/rails/test/query-tests/route_detect/app/config/: routes.rb
routes/queries/rails/test/query-tests/route_detect/app/controllers/: posts_controller.rb  widgets_controller.rb
routes/rules/: __init__.py  angular.yml  cakephp.yml  chi.yml  django-rest-framework.yml  django.yml  express.yml  fastapi.yml  flask.yml  gin.yml  gorilla.yml  grape.yml  jax-rs.yml  laravel.yml  rails.yml  react.yml  sanic.yml  spring.yml  symfony.yml  test-route-detect.yml
routes/templates/: __init__.py  routes.tmpl.html
tests/: test_const.py  test_queries.py  test_rules.py  test_templates.py  test_util.py
tests/test_commands/: test_viz.py  test_which.py
tests/test_rules/: angular.ts  cakephp.php  chi.go  django-rest-framework.py  django.py  express.js  express.ts  fastapi.py  flask.py  gin.go  gorilla.go  grape.rb  jax-rs.java  laravel.php  rails.rb  react.js  react.tsx  sanic.py  spring.java  symfony.php  symfony.test.yaml  test-route-detect.py
