[tool.poetry]
name = "route-detect"
version = "0.8.1"
description = "Find authentication (authn) and authorization (authz) security bugs in web application routes."
authors = []
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/mschwager/route-detect"
homepage = "https://github.com/mschwager/route-detect"
packages = [{include = "routes"}]

[tool.poetry.dependencies]
python = "^3.8"
semgrep = "<1.97.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0"
pre-commit = "<3.6.0" # 3.6.0 requires Python 3.9

[tool.poetry.group.dev]
optional = true

[tool.poetry.scripts]
routes = "routes.main:main"

[[tool.poetry.source]]
name = "foo"
url = "https://foo.bar/simple/"
priority = "secondary"

[tool.coverage.run]
source = ["routes"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
