[project]
name = "route-detect"
version = "0.9.0"
description = "Find authentication (authn) and authorization (authz) security bugs in web application routes."
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9,<4"
authors = []
dependencies = [
    "semgrep (>=1.36.0,<1.97.0)"
]

[project.urls]
homepage = "https://github.com/mschwager/route-detect"
repository = "https://github.com/mschwager/route-detect"

[project.scripts]
routes = "routes.main:main"

[tool.poetry]
packages = [{include = "routes"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.coverage.run]
source = ["routes"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
